--- a/lib/css/material-design-icons.css
+++ b/lib/css/material-design-icons.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: local("☺"), url("../common/fonts/MaterialIcons-Regular.woff2") format("woff2") }
+  src: local("☺"), url("../../common/fonts/MaterialIcons-Regular.woff2") format("woff2") }
 
 .material-icons {
   font-family: 'Material Icons';
